--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   },
   "homepage": "https://github.com/nickodsss/test_hangry#readme",
   "dependencies": {
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2"
   }
